// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component SingleAddress - test SingleAddress - snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "center",
      }
    }
    style={
      {
        "width": "100%",
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 5,
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "marginRight": 10,
                  "opacity": 0.9,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "opacity": 0.65,
                }
              }
            >
               (1 / 1) 
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#c3c3c3",
            "marginHorizontal": 20,
            "marginTop": 20,
            "padding": 10,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View>
            <mockQRCode />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-evenly",
            "marginVertical": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 5,
              "marginTop": 20,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 30,
                  "borderWidth": 1,
                  "marginHorizontal": 10,
                  "paddingHorizontal": 5,
                  "paddingVertical": 5,
                }
              }
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      448,
                      512,
                      [],
                      "f0c5",
                      "M208 0L332.1 0c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9L448 336c0 26.5-21.5 48-48 48l-192 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48zM48 128l80 0 0 64-64 0 0 256 192 0 0-32 64 0 0 48c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 176c0-26.5 21.5-48 48-48z",
                    ],
                    "iconName": "copy",
                    "prefix": "fas",
                  }
                }
                size={20}
                style={
                  {
                    "margin": 5,
                    "opacity": 0.9,
                  }
                }
              />
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 30,
                  "borderWidth": 1,
                  "marginHorizontal": 10,
                  "paddingHorizontal": 5,
                  "paddingVertical": 5,
                }
              }
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      512,
                      512,
                      [
                        61533,
                        "check-circle",
                      ],
                      "f058",
                      "M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z",
                    ],
                    "iconName": "circle-check",
                    "prefix": "fas",
                  }
                }
                size={20}
                style={
                  {
                    "margin": 5,
                    "opacity": 0.9,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 20,
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "column",
                "marginRight": 10,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "column",
                    "flexWrap": "wrap",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "opacity": 1,
                    }
                  }
                >
                  UA-orch...4567890
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "column",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#18bd18",
              "borderColor": "#18bd18",
              "borderRadius": 10,
              "borderWidth": 2,
              "justifyContent": "center",
              "marginBottom": 10,
              "maxWidth": "90%",
              "minHeight": 48,
              "minWidth": "30%",
              "opacity": 1,
              "padding": 0,
              "paddingLeft": 20,
              "paddingRight": 20,
              "width": "80%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 0,
                "minHeight": 48,
                "minWidth": 48,
                "padding": 0,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#011401",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                  "textTransform": "uppercase",
                }
              }
            >
              Share
            </Text>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": undefined,
              "borderRadius": 10,
              "justifyContent": "center",
              "maxWidth": "90%",
              "minHeight": 48,
              "minWidth": "30%",
              "opacity": 1,
              "padding": 0,
              "paddingLeft": 20,
              "paddingRight": 20,
              "width": "80%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 0,
                "minHeight": 48,
                "minWidth": 48,
                "padding": 0,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                  "textTransform": "uppercase",
                }
              }
            >
              New Unified Address
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Component SingleAddress UFVK - test SingleAddress UFVK - snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "center",
      }
    }
    style={
      {
        "width": "100%",
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 5,
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "opacity": 0.65,
                }
              }
            >
               (1 / 1) 
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#c3c3c3",
            "marginHorizontal": 20,
            "marginTop": 20,
            "padding": 10,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View>
            <mockQRCode />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-evenly",
            "marginVertical": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 5,
              "marginTop": 20,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 30,
                  "borderWidth": 1,
                  "marginHorizontal": 10,
                  "paddingHorizontal": 5,
                  "paddingVertical": 5,
                }
              }
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      448,
                      512,
                      [],
                      "f0c5",
                      "M208 0L332.1 0c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9L448 336c0 26.5-21.5 48-48 48l-192 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48zM48 128l80 0 0 64-64 0 0 256 192 0 0-32 64 0 0 48c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 176c0-26.5 21.5-48 48-48z",
                    ],
                    "iconName": "copy",
                    "prefix": "fas",
                  }
                }
                size={20}
                style={
                  {
                    "margin": 5,
                    "opacity": 0.9,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 20,
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "column",
                "marginRight": 10,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "column",
                    "flexWrap": "wrap",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "opacity": 1,
                    }
                  }
                >
                  uview12...4567890
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "column",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#18bd18",
              "borderColor": "#18bd18",
              "borderRadius": 10,
              "borderWidth": 2,
              "justifyContent": "center",
              "marginBottom": 10,
              "maxWidth": "90%",
              "minHeight": 48,
              "minWidth": "30%",
              "opacity": 1,
              "padding": 0,
              "paddingLeft": 20,
              "paddingRight": 20,
              "width": "80%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 0,
                "minHeight": 48,
                "minWidth": 48,
                "padding": 0,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#011401",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                  "textTransform": "uppercase",
                }
              }
            >
              Share
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
